<resources>
    <string name="app_name">Quartett</string>
    <string name="content_description_main_menu">Car</string>

    <!-- main menu button text -->
    <string name="new_local_game">New Game</string>
    <string name="new_online_game">Multiplayer</string>
    <string name="achievements">Achievements</string>
    <string name="setting">Settings</string>
    <string name="continue_game">Spiel fortsetzen</string>
    <!--drawer navigation links -->
    <string name="main_menu">Main Menu</string>
    <string name="gallery">Gallery</string>
    <string name="editor">Deck Editor</string>
    <string name="statistic">Statistic</string>
    <string name="help">Help</string>
    <!--drawer misc -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--In game-->
    <string name="your_turn">Du bist am Zug</string>
    <string name="ai_turn">Dein Gegner ist am Zug</string>
    <!--snack bar text-->
    <string name="not_your_turn">Du bist nicht am Zug!</string>

    <!-- game settings -->
    <string name="game_end_win">You Win</string>
    <string name="game_end_lose">You Lose</string>
    <string name="game_end_draw">Draw</string>
    <string name="game_end_restart">Restart</string>
    <string name="game_end_settings">Change Settings</string>
    <string name="game_end_menu">Main Menu</string>

    <!--game settings text-->
    <string name="game_settings_mode">Mode</string>
    <string name="game_settings_level">Level</string>
    <string name="game_settings_mode_normal">Normal</string>
    <string name="game_settings_mode_points">Point</string>
    <string name="game_settings_mode_time">Minute</string>
    <string name="game_settings_mode_rounds">Round</string>
    <string name="game_settings_mode_insane">Insane</string>
    <string name="game_settings_name">Name</string>
    <string name="game_settings_btn_ok">Next</string>

    <string name="game_settings_level_easy">Easy</string>
    <string name="game_settings_level_normal">Normal</string>
    <string name="game_settings_level_hard">Hard</string>
    <string name="game_settings_name_hint">Name</string>

    <!--gallery-->
    <string name="no_title">No Title</string>
    <string name="image_description_title">Beschreibung</string>
    <string name="gallery_download_title">Download</string>
    <string name="gallery_btn_ok">Ja</string>
    <string name="gallery_btn_cancel">Nein</string>
    <string name="gallery_download_msg">
        Diese Deck ist nicht installiert.
        Soll es heruntergeladen werden?
    </string>
    <string name="gallery_delete_title">Löschen</string>
    <string name="gallery_delete_msg">Diese Deck wirklich löschen?</string>

    <!--stats -->
    <string name="stats_games_won">Games Won</string>
    <string name="stats_games_lost">Games lost</string>
    <string name="stats_hands_won">Hands Won</string>
    <string name="stats_hands_lost">Hands lost</string>
    <string name="stat_description_games_win">
        Die Anzahl der insgesamt gewonnenen Spiel.</string>
    <string name="stat_description_games_lost">
        Die Anzahl der insgesamt verlorenen Spiele.
    </string>
    <string name="stat_description_games_total">
        Die Anzahl der insgesamt gespielten Spiele.
    </string>
    <string name="stat_description_hands_lost">
        Die Anzahl der insgesamt verlorenen Hände.
    </string>
    <string name="stat_description_hands_win">
        Die Anzahl der insgesamt gewonnenen Hände.
    </string>
    <string name="stat_description_hands_total">
        Die Anzahl der insgesamt gespielten Hände.
    </string>


    <!-- game end -->
    <string name="user_no_cards">Du hast alle Karten verloren!</string>
    <string name="ai_no_cards">Dein Gegner hat alle Karten verloren!</string>

    <!--settings navigation links-->
    <string name="default_user_name">Quartet</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="round">Round</string>
    <string name="point">Point</string>
    <string name="time">Time</string>

    <!--multiplayer-->
    <string name="signin_other_error">Es gab Probleme beim Login, bitte
    versuche es gleich noch einmal&#8230;</string>
    <string name="signin_failure">Login nicht möglich!</string>
    <string name="create_automatch">Unbekannt</string>
    <string name="undo">undo</string>
    <string name="max_multiplayer_turns">10</string>
    <string name="turn">Runde</string>
    <string name="vs">vs.</string>


</resources>
