<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_main_menu"
                android:icon="@drawable/ic_menu_menu"
                android:title="@string/main_menu" />
        <item
                android:id="@+id/nav_achievements"
                android:icon="@drawable/ic_menu_achievements"
                android:title="@string/achievements" />
        <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/ic_menu_stats"
                android:title="@string/statistic" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/gallery" />
    </group>

    <item android:title="">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/setting" />
            <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_help"
                    android:title="@string/help" />
        </menu>
    </item>


</menu>