<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_menu"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="?android:attr/actionBarSize"
        tools:context="de.in.uulm.map.quartett.mainmenu.MainMenuFragment"
        android:weightSum="1">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.95"
            android:scaleType="centerCrop"
            android:paddingLeft="4dp"
            android:contentDescription="@string/content_description_main_menu"
            android:paddingRight="4dp"
            android:background="@drawable/main_menu_car"
            android:cropToPadding="true"
            android:adjustViewBounds="false" />

    <Button
            style="@style/MainMenuButtonStyle"
            android:id="@+id/btn_new_local_game"
            android:text="@string/new_local_game"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            style="@style/MainMenuButtonStyle"
            android:id="@+id/btn_new_online_game"
            android:text="@string/new_online_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            style="@style/MainMenuButtonStyle"
            android:id="@+id/btn_achievements"
            android:text="@string/achievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            style="@style/MainMenuButtonStyle"
            android:id="@+id/btn_settings"
            android:text="@string/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>