<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:gravity="center">

        <de.in.uulm.map.quartett.views.BetterArcProgress
                android:id="@+id/stats_win_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                custom:arc_progress="50"
                android:layout_margin="10dp"
                custom:arc_bottom_text="Win %"
                custom:arc_unfinished_color="@color/colorTableDivider"
                custom:arc_finished_color="@color/colorAccent"
                custom:arc_text_color="@color/colorButtonText"
                custom:arc_text_size="34sp"/>

        <de.in.uulm.map.quartett.views.BetterArcProgress
                android:id="@+id/stats_achievement_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                custom:arc_progress="50"
                custom:arc_bottom_text="Achiev"
                custom:arc_unfinished_color="@color/colorTableDivider"
                custom:arc_finished_color="@color/colorAccent"
                custom:arc_text_color="@color/colorButtonText"
                custom:arc_text_size="34sp"/>

        <de.in.uulm.map.quartett.views.BetterArcProgress
                android:id="@+id/stats_hands_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                custom:arc_progress="4"
                custom:arc_bottom_text="Hw/Hl"
                custom:arc_suffix_text=".3"
                custom:arc_unfinished_color="@color/colorTableDivider"
                custom:arc_finished_color="@color/colorAccent"
                custom:arc_text_color="@color/colorButtonText"
                custom:arc_text_size="34sp"/>

    </LinearLayout>

    <View
            style="@style/VerticalDivider"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <TextView
                    android:text="@string/stats_games_won"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp" />

            <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorButtonText"
                    android:id="@+id/stats_games_won"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <TextView
                    android:text="@string/stats_games_lost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp" />

            <TextView
                    android:id="@+id/stats_games_lost"
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorButtonText" />

        </LinearLayout>
    </LinearLayout>


    <View
            style="@style/VerticalDivider"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <TextView
                    android:text="@string/stats_hands_won"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp" />

            <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorButtonText"
                    android:id="@+id/stats_hands_won"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

            <TextView
                    android:text="@string/stats_hands_lost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp" />

            <TextView
                    android:text="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorButtonText"
                    android:id="@+id/stas_hands_lost"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>